[gd_scene load_steps=11 format=3 uid="uid://h5v21uy88gxx"]

[ext_resource type="Script" uid="uid://c3ddbt0slfj75" path="res://01_Main_Screen/02_Levels_Collection/scripts/games_collection.gd" id="1_815nv"]
[ext_resource type="Texture2D" uid="uid://dsrshiohw4j7y" path="res://01_Main_Screen/02_Levels_Collection/assests/Trace.png" id="2_ueedi"]
[ext_resource type="Texture2D" uid="uid://b73b7lno0ur55" path="res://01_Main_Screen/02_Levels_Collection/assests/Pop.png" id="3_f17bd"]
[ext_resource type="Texture2D" uid="uid://caq84cpnxvh3r" path="res://01_Main_Screen/02_Levels_Collection/assests/Collect.png" id="4_0jf7l"]
[ext_resource type="Texture2D" uid="uid://u2ws7di4akt5" path="res://01_Main_Screen/02_Levels_Collection/assests/HideSeek.png" id="5_5q1np"]
[ext_resource type="Texture2D" uid="uid://dqsbxr04tq6g6" path="res://01_Main_Screen/02_Levels_Collection/assests/DragDrop.png" id="6_8jdpx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0jf7l"]
bg_color = Color(0.69803923, 0.13333334, 0.24705882, 0)
corner_radius_top_left = 52
corner_radius_top_right = 52
corner_radius_bottom_right = 52
corner_radius_bottom_left = 52
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5q1np"]
bg_color = Color(0.69803923, 0.13333334, 0.24705882, 0)
corner_radius_top_left = 52
corner_radius_top_right = 52
corner_radius_bottom_right = 52
corner_radius_bottom_left = 52
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8jdpx"]
bg_color = Color(0.69803923, 0.13333334, 0.24705882, 0)
corner_radius_top_left = 52
corner_radius_top_right = 52
corner_radius_bottom_right = 52
corner_radius_bottom_left = 52
shadow_size = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kthir"]
bg_color = Color(0.69803923, 0.13333334, 0.24705882, 0)
corner_radius_top_left = 52
corner_radius_top_right = 52
corner_radius_bottom_right = 52
corner_radius_bottom_left = 52
shadow_size = 10

[node name="Games_Collection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_815nv")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 100
columns = 3

[node name="Control" type="Control" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Trace" type="Button" parent="GridContainer/Control" groups=["button_sound"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -334.75
offset_top = -189.75
offset_right = 320.25
offset_bottom = 184.25
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_0jf7l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5q1np")
theme_override_styles/hover = SubResource("StyleBoxFlat_8jdpx")
theme_override_styles/focus = SubResource("StyleBoxFlat_kthir")
icon = ExtResource("2_ueedi")
icon_alignment = 1
expand_icon = true

[node name="Control2" type="Control" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Pop" type="Button" parent="GridContainer/Control2" groups=["button_sound"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -334.75
offset_top = -189.75
offset_right = 320.25
offset_bottom = 184.25
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_0jf7l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5q1np")
theme_override_styles/hover = SubResource("StyleBoxFlat_8jdpx")
theme_override_styles/focus = SubResource("StyleBoxFlat_kthir")
icon = ExtResource("3_f17bd")
icon_alignment = 1
expand_icon = true

[node name="Control3" type="Control" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Collect" type="Button" parent="GridContainer/Control3" groups=["button_sound"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -334.75
offset_top = -189.75
offset_right = 320.25
offset_bottom = 184.25
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_0jf7l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5q1np")
theme_override_styles/hover = SubResource("StyleBoxFlat_8jdpx")
theme_override_styles/focus = SubResource("StyleBoxFlat_kthir")
icon = ExtResource("4_0jf7l")
icon_alignment = 1
expand_icon = true

[node name="Control4" type="Control" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HideSeek" type="Button" parent="GridContainer/Control4" groups=["button_sound"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -334.75
offset_top = -189.75
offset_right = 320.25
offset_bottom = 184.25
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_0jf7l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5q1np")
theme_override_styles/hover = SubResource("StyleBoxFlat_8jdpx")
theme_override_styles/focus = SubResource("StyleBoxFlat_kthir")
icon = ExtResource("5_5q1np")
icon_alignment = 1
expand_icon = true

[node name="Control5" type="Control" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DragDrop" type="Button" parent="GridContainer/Control5" groups=["button_sound"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -334.75
offset_top = -189.75
offset_right = 320.25
offset_bottom = 184.25
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_0jf7l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5q1np")
theme_override_styles/hover = SubResource("StyleBoxFlat_8jdpx")
theme_override_styles/focus = SubResource("StyleBoxFlat_kthir")
icon = ExtResource("6_8jdpx")
icon_alignment = 1
expand_icon = true

[connection signal="button_down" from="GridContainer/Control/Trace" to="." method="_on_trace_button_down"]
[connection signal="button_up" from="GridContainer/Control/Trace" to="." method="_on_trace_button_up"]
[connection signal="button_down" from="GridContainer/Control2/Pop" to="." method="_on_pop_button_down"]
[connection signal="button_up" from="GridContainer/Control2/Pop" to="." method="_on_pop_button_up"]
[connection signal="button_down" from="GridContainer/Control3/Collect" to="." method="_on_collect_button_down"]
[connection signal="button_up" from="GridContainer/Control3/Collect" to="." method="_on_collect_button_up"]
[connection signal="button_down" from="GridContainer/Control4/HideSeek" to="." method="_on_hide_seek_button_down"]
[connection signal="button_up" from="GridContainer/Control4/HideSeek" to="." method="_on_hide_seek_button_up"]
[connection signal="button_down" from="GridContainer/Control5/DragDrop" to="." method="_on_drag_drop_button_down"]
[connection signal="button_up" from="GridContainer/Control5/DragDrop" to="." method="_on_drag_drop_button_up"]
